--- a/app_tier/Dockerfile
+++ b/app_tier/Dockerfile
@@ -2,25 +2,25 @@ FROM ubuntu:latest
 
 MAINTAINER Tige Phillips <tige@tigelane.com>
 # This container runs the application layer of Brimstone 3
-# Brimstone is a an application to manage truck drivers
+# Brimstone is a an application to manage construction jobs
 
 # Port to access the Flask application on - change if needed.
 EXPOSE 5000
 
-RUN apt-get update
-RUN apt-get -y upgrade
-
-#################
-# GIT and MYSQL #
-#################
-RUN DEBIAN_FRONTEND=noninteractive apt-get -y install git mysql-client
+RUN apt-get update ;\
+    apt-get -y upgrade
 
 ####################
 # PYTHON and TOOLS #
 ####################
 RUN DEBIAN_FRONTEND=noninteractive apt-get -y install python2.7 python-pip python-dev libmysqlclient-dev
-RUN DEBIAN_FRONTEND=noninteractive pip install MySQL-python flask
-RUN pip install requests
+RUN DEBIAN_FRONTEND=noninteractive pip install flask requests
+RUN pip install MySQL-python
+
+#################
+# GIT and MYSQL #
+#################
+RUN DEBIAN_FRONTEND=noninteractive apt-get -y install git mysql-client
 
 ############
 # Development only tools - remove before runtime
@@ -28,7 +28,7 @@ RUN pip install requests
 RUN DEBIAN_FRONTEND=noninteractive apt-get -y install vim
 
 #################
-# Install       #
+# App Install   #
 #################
 CMD mkdir /usr/local/brimstone
 ADD brimstone_app.py /usr/local/brimstone/
@@ -38,9 +38,6 @@ ADD brimstone_app.py /usr/local/brimstone/
 #################
 # Place bash users directly into /usr/local/brimstone
 WORKDIR /usr/local/brimstone
-
-# Port to access the Flask application on - change if needed.
-EXPOSE 5000
 
 # By default when this container runs, simply start the application
 CMD /usr/local/brimstone/brimstone_app.py
